@@ -4,8 +4,8 @@ this repository contains the full copyright notices and license terms. -->
 <form>
     <label name="name"/>
     <field name="name" colspan="3"/>
-    <label name="code"/>
-    <field name="code"/>
+    <label name="sequence_type"/>
+    <field name="sequence_type" widget="selection"/>
     <label name="active"/>
     <field name="active"/>
     <label name="prefix"/>
