@@ -4,6 +4,4 @@ this repository contains the full copyright notices and license terms. -->
 <form>
     <label name="name"/>
     <field name="name"/>
-    <label name="code"/>
-    <field name="code" readonly="1"/>
 </form>
