@@ -3,5 +3,4 @@
 this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="name" expand="2"/>
-    <field name="code" expand="1"/>
 </tree>
