@@ -778,7 +778,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <record model="ir.rule" id="rule_sequence">
             <field name="domain"
-                eval="[('groups', 'in', Eval('groups', []))]"
+                eval="[('sequence_type.groups', 'in', Eval('groups', []))]"
                 pyson="1"/>
             <field name="rule_group" ref="rule_group_sequence"/>
         </record>
@@ -791,7 +791,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <record model="ir.rule" id="rule_sequence_strict">
             <field name="domain"
-                eval="[('groups', 'in', Eval('groups', []))]"
+                eval="[('sequence_type.groups', 'in', Eval('groups', []))]"
                 pyson="1"/>
             <field name="rule_group" ref="rule_group_sequence_strict"/>
         </record>
