@@ -2,9 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath
-        expr="/form/field[@name='code']"
-        position="after">
+    <xpath expr="/form" position="inside">
       <field name="groups" colspan="4"/>
     </xpath>
 </data>
